[package]
name = "lqf"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A lightweight, easy-to-read config format with clean section syntax and simple parsing."
readme = "README.md"
repository = "https://github.com/smit4k/lqf"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
pest = "2.6"
pest_derive = "2.6"
